# btc-demo-trading

./: README.md  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  config.py  main.py  models.py  pyproject.toml
backend/api/: dependencies.py
backend/api/endpoints/: __init__.py  account.py  orders.py  price.py
backend/models/: __init__.py  db_models.py  schemas.py
backend/repositories/: __init__.py  account_repo.py  orders_repo.py
backend/services/: __init__.py  account_service.py  cache_service.py  order_service.py  price_service.py
backend/tests/: conftest.py  test_models.py
backend/tests/test_repositories/: test_account_repo.py  test_orders_repo.py
backend/tests/test_services/: test_account_service.py  test_cache_service.py  test_order_service.py  test_price_service.py
web/: Dockerfile  package-lock.json  package.json
web/src/: types.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/components/: AccountInfo.tsx  HistoryTable.tsx  OrdersTabs.tsx  PositionsTable.tsx  PriceDisplay.tsx  TradeButtons.tsx
web/src/app/hooks/: useCryptoData.ts
